# Geometric_Tool

./: AssignmentGUI.hh  BezierEditor.hh  CMakeLists.txt  CurvatureVisualization.hh  EditorBase.hh  GLErrors.hh  KnotViewer.cc  KnotViewer.hh  LinePlotter.hh  PolyapproxEditor.hh  PolyinterpEditor.hh  README.md  SplineEditor.hh  SplineInterpEditor.hh  SurfaceEditor.hh  TriDiagonalSystem.hh  TriSurfEditor.hh  UVDomainWidget.cc  UVDomainWidget.hh  VectorFieldRenderer.hh  Viewer.hh  bezier.cc  bezier.hh  main.cc  plot_basis_functions.py  polyinterp.cc  polyinterp.hh  spline.cc  spline.hh  spline_interpolation.cc  spline_interpolation.hh  tensor_product_surface.cc  tensor_product_surface.hh  test_derivatives.cc  triangle_surf.cc  triangle_surf.hh
cmake/: libigl.cmake
shaders/: line.frag  line.vert  vector_field.frag  vector_field.vert
